--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -705,5 +705,29 @@
   "1ff072f8-6913-4b85-a1e4-4e4ecc1a1bf4": "afgekeurd",
   "f90728f1-0e73-4027-9408-adfc38c9a4f0": "Tekst met feedback",
   "21c3edb6-8c2d-43c2-8c51-245d75006774": "Dit zijn de opmerkingen die ingevuld werden bij het afkeuren van een kampmelding",
-  "ac49cf9f-c0de-479c-829d-99e7a31874d2": "Een van de telefoonnummers die je had opgegeven lijkt niet geldig te zijn, kan je deze nog aanvullen en de kampmelding daarna opnieuw indienen?"
+  "ac49cf9f-c0de-479c-829d-99e7a31874d2": "Een van de telefoonnummers die je had opgegeven lijkt niet geldig te zijn, kan je deze nog aanvullen en de kampmelding daarna opnieuw indienen?",
+  "509cdb4f-131a-42a6-b3b1-a63cca231e65": "Er ging iet mis bij het uploaden van jouw bestand. Probeer het later opnieuw (foutcode: SIGN).",
+  "479684ab-6c50-4ced-82d7-8245f4f475f4": "Je probeert een bestand up te loaden dat niet door ons is gegenereerd. Probeer het opnieuw.",
+  "209f9f13-4897-4310-95eb-f436987b8ba7": "Kijk hieronder na of alle functies toegekend zijn. Om een functie toe te kennen zorg je er eerst voor dat de persoon is ingeschreven in Stamhoofd, daarna kan je functies toekennen door het lid open te klikken in het tabblad ‘Leden’. Daar kan je met de rechtermuisknop op een lid klikken en \"Functies bewerken\" kiezen.",
+  "a7db7ad2-4106-4cf0-a8fc-1e68b0a5bf24": "Activiteitsnaam",
+  "cbfe8b26-7422-44dd-af53-90e14baa4d9a": "Activiteiten",
+  "7f4247c2-2bc1-4f0d-89d5-f4ea51e92bfa": "Organisator",
+  "e4017a21-58c1-4cea-824c-8cef6a7ab019": "Opmerkingen",
+  "ec0978f8-95bc-44c9-a906-ceaf6fd55baf": "Ben je zeker dat je deze melding wilt indienen?",
+  "6b0ddff7-226f-4616-a0da-a280d0ccc2ff": "Ja, indienen",
+  "754f6578-9fee-44f3-931c-dc00a34d7871": "Je kan je melding niet meer aanpassen na het indienen.",
+  "f48e7518-0f1d-4610-a967-82d146a47f5b": "Ben je zeker dat je deze melding wilt goedkeuren?",
+  "eacd1cfa-a04b-485b-bd8d-41c1518e5306": "Ja, goedkeuren",
+  "f1bebbb8-20dc-4e6c-886d-68f080f71a1e": "Reden voor afkeuring",
+  "2d9128d3-a428-4ba6-9b12-6c2f00ca7c31": "Je kan hier een opmerking achterlaten waarom je deze melding afkeurt.",
+  "fe9c9ec1-dd24-4fc6-9622-7b5aef4e9208": "Afkeuren",
+  "63e45277-76d4-4971-909b-1c86326b609f": "Gelieve een reden in te vullen",
+  "938b1f40-9563-4a26-8d87-05774839b5a7": "Opmerkingen wijzigen",
+  "cb13500b-5d71-46df-846c-03f27b898dd7": "Opslaan",
+  "3f4666f9-59b5-4a24-b1a7-9f820275c042": "Hier kan je als beheerder leden inschrijven voor een activiteit. Het meest praktische is dat elk lid zichtzelf inschrijft via Stamhoofd, maar dat is misschien niet altijd mogelijk.",
+  "3ab07939-121b-47f9-956f-a573c57ec008": "Je kan zelf ook leden inschrijven voor deze activiteit. Jouw groep betaalt dan meteen de kostprijs aan de organisator, waarna Stamhoofd automatisch één of meerdere openstaande bedragen aanmaakt van de ingeschreven leden aan jouw groep (te betalen via het ledenportaal of manueel betaling te registreren).",
+  "7cac9136-10b5-4f1c-b9a4-0fb3f8410a9b": "Je kan zelf ook leden inschrijven voor deze activiteit.",
+  "d87cdb56-c8a6-4466-a6fd-f32fe59561f5": "Aangevinkt",
+  "01b79813-933b-4045-b426-82700f921eaa": "Niet aangevinkt",
+  "ee2852cb-6458-4127-8ad0-3281cc286884": "Voorbeeld bekijken"
 }
