--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -2,7 +2,8 @@
   "replacements": {
     "Stamhoofd": "Ravot",
     "Ledenportaal": "Mijn account",
-    "het ledenportaal": "‘Mijn account’"
+    "het ledenportaal": "‘Mijn account’",
+    "#koepel": "KSA Nationaal"
   },
   "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder jouw lokale groep om je in te schrijven of om jouw gegevens te beheren.",
   "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
