Cleaned up translations files

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -337,7 +337,7 @@
   "ca88e88f-d859-4445-a13a-4b73c359cd6f": "Schrijf leden in",
   "d14ea349-afa8-49f3-bdb0-aac23a41887f": "Schrijf leden in bij elke leeftijdsgroep.",
   "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen op Stamhoofd",
-  "75815048-939a-4ac1-a81c-f23fc3ec5006": "Je betaalt {price} aan KSA Nationaal.",
+  "75815048-939a-4ac1-a81c-f23fc3ec5006": "Je betaalt als #lokale-groep {price} aan #koepel.",
   "a83523bb-ba90-4a6c-a73a-4d4f12defe7a": "De functie {financialSupportTitle} staat uit, maar je hebt nog {financialSupportPriceName} ingesteld",
   "77578f4e-049c-4d64-b63c-357fb6d0d7ac": "{financialSupportPriceName} moet minstens {minDifference} lager zijn dan de standaardprijs",
   "88119ffc-b692-4222-8217-75a9fa64f675": "Reken een bedrag aan aan de {count} geselecteerde #groepen.",
