--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -1,17 +1,31 @@
 {
-  "replacements": {
-    "Stamhoofd": "Ravot",
-    "Ledenportaal": "Mijn account",
-    "het ledenportaal": "‘Mijn account’",
-    "#koepel": "KSA Nationaal"
-  },
-  "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder jouw lokale groep om je in te schrijven of om jouw gegevens te beheren.",
-  "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
-  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
-  "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
-  "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
-  "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
-  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
+    "replacements": {
+        "#Groep": "Groep",
+        "#Groepen": "Groepen",
+        "#Lokale-groep": "Lokale groep",
+        "#Lokale-groepen": "Lokale groepen",
+        "#groep": "groep",
+        "#groepen": "groepen",
+        "#koepel": "KSA Nationaal",
+        "#lokale-groep": "lokale groep",
+        "#lokale-groepen": "lokale groepen",
+        "#platform": "Ravot",
+        "Demovereniging": "KSA Demo",
+        "Ledenportaal": "Mijn account",
+        "Stamhoofd": "Ravot",
+        "Vereniging": "Groep",
+        "Verenigingen": "Groepen",
+        "het ledenportaal": "‘Mijn account’",
+        "vereniging": "groep",
+        "verenigingen": "groepen"
+    },
+    "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder jouw lokale groep om je in te schrijven of om jouw gegevens te beheren.",
+    "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
+    "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
+    "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
+    "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
+    "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
+    "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
     "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering KSA Nationaal*",
-  "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij KSA Nationaal moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van KSA Nationaal."
+    "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij KSA Nationaal moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van KSA Nationaal."
 }
