--- a/shared/locales/src/keeo/base.json
+++ b/shared/locales/src/keeo/base.json
@@ -1,10 +1,33 @@
 {
-  "replacements": {
-    "Stamhoofd": "Keeo",
-    "KSA Nationaal": "FOS Open Scouting",
-    "#koepel": "FOS Open Scouting"
-  },
-  "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
-  "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Keeo. Hier kan je jouw eenheid beheren, leden bekijken, en instellingen aanpassen.",
-  "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk)."
+    "replacements": {
+        "#Groep": "Eenheid",
+        "#Groepen": "Eenheden",
+        "#Lokale-groep": "Eenheid",
+        "#Lokale-groepen": "Eenheden",
+        "#groep": "eenheid",
+        "#groepen": "eenheden",
+        "#koepel": "FOS Open Scouting",
+        "#lokale-groep": "eenheid",
+        "#lokale-groepen": "eenheden",
+        "#platform": "Keeo",
+        "Demovereniging": "FOS De Goudvis",
+        "Groepsnaam": "Eenheidsnaam",
+        "Groepsnummer": "Eenheidsnummer",
+        "KSA Nationaal": "FOS Open Scouting",
+        "Stamhoofd": "Keeo",
+        "Vereniging": "Eenheid",
+        "Verenigingen": "Eenheden",
+        "Werkjaar": "Scoutsjaar",
+        "Werkjaren": "Scoutsjaren",
+        "demovereniging": "FOS De Goudvis",
+        "groepsnaam": "eenheidsnaam",
+        "groepsnummer": "eenheidsnummer",
+        "vereniging": "eenheid",
+        "verenigingen": "eenheden",
+        "werkjaar": "scoutsjaar",
+        "werkjaren": "scoutsjaren"
+    },
+    "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
+    "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Keeo. Hier kan je jouw eenheid beheren, leden bekijken, en instellingen aanpassen.",
+    "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk)."
 }
