Removed duplicate translation keys
fixes STA-485

--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -20,13 +20,17 @@
         "vereniging": "groep",
         "verenigingen": "groepen"
     },
-    "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder jouw lokale groep om je in te schrijven of om jouw gegevens te beheren.",
     "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
     "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
+    "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering KSA Nationaal*",
+    "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij KSA Nationaal moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van KSA Nationaal.",
+    "81c91169-db1e-4819-8716-5382ffbaa43b": "Het groepsnummer is een unieke code voor deze vereniging. Deze wordt in de URL-balk van de browser gebruikt.",
+    "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Groepsnummer",
+    "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Ravot. Zoek hieronder de groep waar je wilt inschrijven of ga naar het algemene ledenportaal.",
+    "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van KSA, hier kan je jouw gegevens beheren en je inschrijven bij een KSA groep of voor een activiteit.",
     "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
     "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
     "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
     "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
-    "528545c4-028b-4711-9b16-f6fa990c3130": "Aansluiting/verzekering KSA Nationaal*",
-    "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij KSA Nationaal moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw groep gebruikt gekoppeld kan worden aan de benaming van KSA Nationaal."
+    "cd60d49f-9fc8-4fb7-b574-1231874c1d43": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 15 oktober is nagekeken."
 }
