--- a/shared/locales/src/keeo/base.json
+++ b/shared/locales/src/keeo/base.json
@@ -31,5 +31,12 @@
     },
     "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
     "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Keeo. Hier kan je jouw eenheid beheren, leden bekijken, en instellingen aanpassen.",
-    "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk)."
+    "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
+    "cd60d49f-9fc8-4fb7-b574-1231874c1d43": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 1 september is nagekeken. De deadline om je leden in te schrijven en op orde te zetten is 15 november.",
+    "81c91169-db1e-4819-8716-5382ffbaa43b": "Het eenheidsnummer is een unieke code voor deze eenheid. Deze wordt in de URL-balk van de browser gebruikt.",
+    "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Eenheidsnummer",
+    "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van FOS Open Scouting, hier kan je jouw gegevens beheren en je inschrijven bij een eenheid of voor een activiteit.",
+    "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Ledenportaal",
+    "9305016a-babf-4606-af6c-e8ef9f2ba91e": "Weet je zeker dat je {total} wilt aanrekenen aan {count} eenheid/eenheden?",
+    "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw eenheid bevindt zich in een ander werkjaar dan Fos Open Scouting."
 }
