--- a/shared/locales/src/nl-BE.json
+++ b/shared/locales/src/nl-BE.json
@@ -1,6 +1,5 @@
 {
-  "7f30db7e-4851-4aa6-b731-2c898054f707": "GSM-nummer van ouder",
-  "2f645618-a9a9-4598-883d-6f1991ae379d": "Geen rechtspersoonlijkheid (feitelijke vereniging)",
-  "90d84282-3274-4d85-81cd-b2ae95429c34": "GSM-nummer",
-  "1c459ea7-2652-466e-9fc7-23278d21ca36": "Inloggen"
+    "7f30db7e-4851-4aa6-b731-2c898054f707": "GSM-nummer van ouder",
+    "2f645618-a9a9-4598-883d-6f1991ae379d": "Geen rechtspersoonlijkheid (feitelijke vereniging)",
+    "90d84282-3274-4d85-81cd-b2ae95429c34": "GSM-nummer"
 }
