Updated 'Gemeente' in nl-NL

--- a/shared/locales/src/nl-NL.json
+++ b/shared/locales/src/nl-NL.json
@@ -1,5 +1,6 @@
 {
   "shared": {
+    "Gemeente": "Woonplaats",
     "login": "Inloggen",
     "transferTypes": {
       "structured": "Betalingskenmerk"
