--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1,5 +1,6 @@
 {
   "shared": {
+    "Gemeente": "Gemeente",
     "login": "Inloggen",
     "transferTypes": {
       "structured": "Gestructureerde mededeling"
