--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -777,5 +777,30 @@
   "07290df8-cad5-40df-9e10-3c7eccc049bc": "Voorbeeldleeftijdsgroep",
   "5d507258-d6dd-4b3b-a6ef-1b14c6db14bc": "Een extra Stripe account naast je eerste Stripe account kost éénmalig 5 euro. Hiermee kan je betalingen per webshop op een andere rekening laten storten door een andere bankrekening te koppelen met je nieuwe account.",
   "e977e290-dff3-401c-a520-0a5e8abac1e1": "Ben je zeker dat je alle antwoorden wilt wissen?",
-  "587c7b87-b79e-4f3c-a55e-9fc8331d86c6": "Ja, wissen"
+  "587c7b87-b79e-4f3c-a55e-9fc8331d86c6": "Ja, wissen",
+  "a5c0dce2-01df-4a57-8d02-0b79cec9b89d": "de vereniging {name} op {platform}",
+  "e3e4ba16-7923-42bc-ae23-cd729ce06869": "Je kan maar één lid hebben met de functie {responsibility} in deze leeftijdsgroep",
+  "77e408e8-59e5-42c2-b58d-956f7c391e5c": "Je kan maar één lid hebben met de functie {responsibility}",
+  "10c13841-9f58-4651-a9b3-a34c8ce1a505": "Je kan maximum {count} leden hebben met de functie {responsibility} in deze leeftijdsgroep",
+  "01ef9768-89b5-48ea-955e-b896306a9a87": "Je kan maximum {count} leden hebben met de functie {responsibility}",
+  "36e8f895-91df-4c88-88e7-d4f0e9d1b5bf": "Je hebt geen toegangsrechten om een lid in te schrijven voor {group}",
+  "d24814a3-aedc-4569-9ab3-f854027c4e9f": "Je hebt geen toegang tot dit lid of het bestaat niet",
+  "9106b204-3db9-4fac-acfa-e53e07d5a867": "Herinnering titel",
+  "16e52c0a-81e8-4d24-9efb-470a92b74c15": "bv. Dien je kampmeldingen voor je paaskampen in voor 1 maart",
+  "49706c38-6fcf-4533-8692-ccf5836a27df": "Herinnering beschrijving",
+  "55770076-d3a3-48db-a49b-ba23c6a54a39": "bv. Ga naar je kamp in het tabblad Activiteiten (of maak het eerst aan) en klik op de knop om je kampmelding in te dienen",
+  "ba2b2a5a-8c8a-42c5-9ee7-78daa3b6c5ec": "Als eerstsvolgende deadline",
+  "31d7f684-a6e1-4df5-8ac7-c971e5919cc7": "Aantal dagen op proef",
+  "d2047614-32d8-436f-9b95-dff31cfe20de": "API-key {name} is aangepast",
+  "7b900dda-9d43-4373-ae86-34ec7f236cca": "Ben je zeker dat je deze API-key wilt verwijderen?",
+  "14f2d606-a7c9-4cdf-9ee9-aca38beb9689": "Verwijderen",
+  "5fd1f84b-ed82-4022-80d0-49caad220c88": "API-key {name} werd verwijderd",
+  "545f3db5-ae26-41dd-8771-e123bc2b583e": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
+  "f0c89199-09c8-48d4-ad73-bff0ac426df8": "Niet opslaan",
+  "0076d594-efee-4ec7-a00a-073a4c689a38": "Naamloos",
+  "43ff8e32-1a0b-41cf-b9a6-8e4c85d12739": "Je hebt geen rechten om een activiteit aan te maken voor deze #groep.",
+  "13a4b7fa-7de6-497e-9e7c-6aee4f783260": "Je kan activiteiten voor andere #groepen enkel aanmaken via het beheerdersportaal van die #groep zelf.",
+  "67967405-d320-4d40-8dc0-889915da1f34": "Kies een organisator van deze inschrijvingen",
+  "2e5e052c-98b7-4375-b771-05a8913c145b": "Voor nationale activiteiten moet je kiezen via welke #groep alle betalingen verlopen. De betaalinstellingen van die #groep worden dan gebruikt en alle inschrijvingen worden dan ingeboekt in de boekhouding van die #groep.\\n\\nDaarnaast bepaalt de organisator ook instellingen die invloed hebben op de dataverzameling en andere subtielere zaken.",
+  "3f4f6c6a-e2c5-4bee-83a3-77d8e55a1e60": "Gemeente"
 }
