Added charge members endpoint

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -347,7 +347,7 @@
   "4a5ca65c-3a96-4ca0-991c-518a9e92adb7": "Aangerekend door",
   "11d6f2fc-c72d-4c18-aa6d-b8118c2aaa5c": "Beschrijving",
   "e4a32f97-64aa-43d7-803f-3d18f7cdf8e4": "Beschrijving van de aanrekening",
-  "7453643b-fdb2-4aa1-9964-ddd71762c983": "Bedrag",
+  "7453643b-fdb2-4aa1-9964-ddd71762c983": "Eenheidsprijs",
   "a0f52fae-a4e6-4c3c-a6af-83218dd399b2": "Aantal",
   "e412b71e-566b-41d4-8b1f-97ab7f140b29": "Bedrag aanrekenen",
   "ddf3558e-ed2e-4217-9155-495c3984d769": "Ben je zeker dat je wilt sluiten zonder een bedrag aan te rekenen?",
