--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -802,5 +802,9 @@
   "13a4b7fa-7de6-497e-9e7c-6aee4f783260": "Je kan activiteiten voor andere #groepen enkel aanmaken via het beheerdersportaal van die #groep zelf.",
   "67967405-d320-4d40-8dc0-889915da1f34": "Kies een organisator van deze inschrijvingen",
   "2e5e052c-98b7-4375-b771-05a8913c145b": "Voor nationale activiteiten moet je kiezen via welke #groep alle betalingen verlopen. De betaalinstellingen van die #groep worden dan gebruikt en alle inschrijvingen worden dan ingeboekt in de boekhouding van die #groep.\\n\\nDaarnaast bepaalt de organisator ook instellingen die invloed hebben op de dataverzameling en andere subtielere zaken.",
-  "3f4f6c6a-e2c5-4bee-83a3-77d8e55a1e60": "Gemeente"
+  "3f4f6c6a-e2c5-4bee-83a3-77d8e55a1e60": "Gemeente",
+  "0671f7d3-7089-4cde-b28b-79acb10bea28": "Prullenmand",
+  "1dfaeb07-5f01-42c7-a9a4-0096047da86e": "Vragenlijst van #koepel",
+  "4dea71e9-0965-4c9a-81ac-6ee7046a0d8e": "Eigen vragenlijst",
+  "a3101c16-5dc1-4baf-82fd-9f1f900281d0": "Voeg minstens één keuzemogelijkheid toe"
 }
