--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -806,5 +806,36 @@
   "0671f7d3-7089-4cde-b28b-79acb10bea28": "Prullenmand",
   "1dfaeb07-5f01-42c7-a9a4-0096047da86e": "Vragenlijst van #koepel",
   "4dea71e9-0965-4c9a-81ac-6ee7046a0d8e": "Eigen vragenlijst",
-  "a3101c16-5dc1-4baf-82fd-9f1f900281d0": "Voeg minstens één keuzemogelijkheid toe"
+  "a3101c16-5dc1-4baf-82fd-9f1f900281d0": "Voeg minstens één keuzemogelijkheid toe",
+  "000be3fe-9354-4c2c-baf1-d0cd4d079830": "Kampmeldingen",
+  "5239cde1-c980-43eb-b6f1-83f6bcd0652d": "Unieke identificatie van de kampmelding",
+  "ab4f65c9-8acb-4e7d-a40c-78afe71a489d": "Activiteitsnaam",
+  "3eefa3b1-525b-464b-adef-e3b9efd9257f": "Groepsnaam",
+  "eae11d90-befa-4482-9fe3-412cba791ef5": "Groepsnummer",
+  "6b4b9fb3-ca24-43cd-9f7b-a5f597b943d8": "Status",
+  "387f4352-c78d-4e21-9dfe-a2433e3ba554": "Opmerkingen",
+  "f36ea1e0-7bf6-4e15-b921-cd50ec889e33": "Startdatum",
+  "43deefc6-dd11-4d2c-bf95-2c20150a246f": "Einddatum",
+  "65110237-a12e-4cbd-8514-75a942626d7a": "Datum",
+  "27301eda-b7f6-44c3-baed-25e8f416d777": "Indiener",
+  "4ae26268-586e-41f7-875d-90137f9ed836": "Manueel gesloten",
+  "355512bd-902c-4193-8aa0-81e5cb81284b": "Aangepast sinds voorlopige goedkeuring",
+  "15407414-de94-40bf-8a62-c5f37613ed39": "Voorlopig goedkeuren",
+  "153fcd92-0ce3-4465-b9ce-b2e68c496a9a": "Je kan hieronder nog opmerkingen achterlaten over wat er nog moet worden aangevuld en tegen wanneer.",
+  "21127e91-a406-4a40-b9a7-af4e45c1f907": "Originele antwoorden",
+  "3a851e65-6c43-433f-a7af-808ea01f271e": "Hieronder zie je de antwoorden op alle vragen op het moment van de laatste (voorlopige) goedkeuring",
+  "04606184-d9d9-4cb0-a98a-a4457f1d0293": "Reken een bedrag aan aan het geselecteerde lid.",
+  "fce1ee6b-8dfc-43f6-b34a-5f9037326e76": "Reken een bedrag aan aan de {count} geselecteerde leden.",
+  "173a325e-049d-4ce1-a220-e75c37e99b01": "Weet je zeker dat je {total} wilt aanrekenen aan 1 lid?",
+  "459ab829-65a9-4a55-8349-f8ec381fe9b3": "Weet je zeker dat je {total} wilt aanrekenen aan {count} leden?",
+  "1402e826-1f61-498a-81b4-595dce3248d0": "Te betalen tegen",
+  "0dd9b51d-792f-4f97-9284-70404600581c": "voorlopig goedgekeurd",
+  "f24bc296-9945-4b12-a3b2-e5c1e7a7c52c": "Kampmelding voorlopig goedgekeurd",
+  "56dbf1c6-1651-41dc-95c5-4a9fece298c2": "E-mail die wordt verzonden naar de indieners als de kampmelding voorlopig wordt goedgekeurd",
+  "0a37de09-120b-4bea-8d13-6d7ed6823884": "Adres",
+  "780f327b-5a25-497f-b741-7d0b1a659db9": "Straat",
+  "af42889c-3278-4dab-8e5c-5ada25e40cf8": "Nummer",
+  "997da269-7091-470e-9032-abe1a1ea8096": "Postcode",
+  "b87def14-63e9-4c00-bff9-21283f7890a9": "Gemeente",
+  "b1064996-ca77-48d0-b178-4bbd6af44e8e": "Land"
 }
