Fixed wrong platform reference

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -93,7 +93,7 @@
   "adf3218e-a785-4dc9-8d2a-70031c6c8bee": "Zoek jouw vereniging",
   "7c2fee1a-0838-4346-848d-a3d984e70fdc": "Het bedrag wordt achteraf door KSA Nationaal aan je groep gefactureerd.",
   "f3cc0597-fe12-4cb1-bd41-4c7ce5d59235": "Tot en met",
-  "ec0c482e-0528-499f-82fa-b081bf708ded": "Dit lid is bij geen enkele KSA groep aangesloten voor het huidige werkjaar en kan daardoor niet aangesloten worden",
+  "ec0c482e-0528-499f-82fa-b081bf708ded": "Dit lid is bij geen enkele #groep ingeschreven voor het huidige werkjaar en kan daardoor niet aangesloten worden",
   "3d3a30bb-3628-413e-8d1a-3864b1dae8e1": "Vanaf",
   "cb85826e-06fc-473c-95c2-ba338fdbab50": "Kies een aansluitingstype",
   "2f645618-a9a9-4598-883d-6f1991ae379d": "Geen rechtspersoonlijkheid",
