--- a/shared/locales/src/keeo/base.json
+++ b/shared/locales/src/keeo/base.json
@@ -38,5 +38,5 @@
     "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van FOS Open Scouting, hier kan je jouw gegevens beheren en je inschrijven bij een eenheid of voor een activiteit.",
     "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Ledenportaal",
     "9305016a-babf-4606-af6c-e8ef9f2ba91e": "Weet je zeker dat je {total} wilt aanrekenen aan {count} eenheid/eenheden?",
-    "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw eenheid bevindt zich in een ander werkjaar dan Fos Open Scouting."
+    "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw eenheid bevindt zich in een ander werkjaar dan FOS Open Scouting."
 }
