Improved visible settings and features

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -37,8 +37,8 @@
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
   "5f0e24bb-10db-428b-a480-6f73d959cafa": "De link naar de website van deze vereniging.",
   "9021f6b0-d1ae-422b-9651-48c7f5383b0b": "Soms wil je personen die geen lid zijn toegang geven tot Stamhoofd. Dat kan door externe beheerdersrollen aan te maken, en die rollen vervolgens toe te kennen aan externe beheerders.",
-  "28483e7d-2831-4b1a-8321-3c2bc02df268": "Beheer de beheerders van het platform",
-  "c0f067fd-3d30-4199-b9da-879a4f011f27": "Beheerders",
+  "28483e7d-2831-4b1a-8321-3c2bc02df268": "Stel de beschikbare standaard functies in en beheer wie toegang heeft tot het platform.",
+  "c0f067fd-3d30-4199-b9da-879a4f011f27": "Beheerders en functies",
   "8677fa37-3092-42af-869e-bd7363461d32": "Stel de standaard leeftijdsgroepen in",
   "24682ea8-b3c6-4372-9a63-5385520888ff": "Standaard leeftijdsgroepen",
   "99df0115-6c75-49be-a20b-fff9944c4bca": "Nieuw aansluitingstype",
