Reverted replace keys consistent words

--- a/shared/locales/src/consistent-words-en.json
+++ b/shared/locales/src/consistent-words-en.json
@@ -1,94 +1,94 @@
 {
-  "2d7c2415-4a13-4fc1-a8f3-ce9edc893eae": "Stamhoofd",
-  "e5f00b6a-9424-46b7-ada2-9474160189c4": "association",
-  "0e7d5835-88a4-4de7-9ece-cc79813215ec": "work year",
-  "582a0bf8-e136-4768-b5aa-4677d9c3d78b": "default",
-  "cd1d6332-12c9-49b8-9fc9-1f3ccc25b87c": "amount",
-  "6e4cd821-9ada-434b-b32c-293836b6008d": "data",
-  "efc92098-8600-41e8-bbd9-a2d2edbcd19d": "activity",
-  "a609e0e7-b23b-4cf9-b6e2-a48dc6992280": "new",
-  "371dc13a-25fb-4d0f-9ab7-2629c36bc3dd": "register",
-  "2678d3d5-212c-45e6-94b1-5e2e52b77cad": "affiliation",
-  "96e61729-ea9c-45bf-82da-56e6a92e6b91": "roles",
-  "f6cfde0e-7b20-4815-a679-3972b5ef9d83": "settings",
-  "6079dbc5-1aa8-4ddd-91c8-5014fb8caf17": "local",
-  "f62c0e06-aa25-489d-b385-a16cfdfeec41": "age group",
-  "4070dda9-b556-49cd-ba17-aad535240835": "registrations",
-  "79a18e02-fb69-46d9-b11e-054856c3bf28": "groups",
-  "b6185496-deab-4569-906f-c636e625bcd1": "other",
-  "1a2acfbd-967a-4c9e-a3aa-cc5dfbe02fad": "automatic",
-  "9e3f251e-4730-44ce-9fae-242d1fd59832": "camp notification",
-  "26bf0ec2-3500-4149-a21a-b3c31dc3c6d5": "change",
-  "f9f54c90-c0f7-4be5-bb5e-43d179e3879f": "confirm",
-  "ee3bc635-c294-4134-9155-7a74f47dec4f": "edit",
-  "97a474e6-5bb7-4065-8ad4-1b02ec47e96a": "role",
-  "8fcec607-ea4d-4a0e-8ec9-c6c83894109c": "emails",
-  "d207a160-06a9-4fc7-9d31-f33290c02978": "email",
-  "06da1310-e17c-475e-bcd3-bb47844c24c1": "add",
-  "34273a31-1a9d-4d71-b3c1-fcf5a1267b21": "notification",
-  "f7999a55-e73a-49c4-ac9f-f5030d96ba43": "age groups",
-  "d7fdebd4-7c3c-4316-b862-7ed777ff36ad": "billing data",
-  "78855ceb-1d1c-44d1-a49d-b0d2dcc033f0": "charged",
-  "0eddcd7d-3ea1-4993-b758-940a427dec4a": "payments",
-  "2baa44e5-e632-45ad-8233-b6e5f3c5326b": "access",
-  "7930ba25-e362-4706-b6c0-faec5d94402d": "used",
-  "3e633a5b-b9ee-48b3-aa20-971650d040dc": "website",
-  "9a354065-67c5-4d2d-bc88-8319cc7fc2a4": "description",
-  "6de45f71-4a88-4ff8-8678-2e5f651d51b9": "affiliated",
-  "5c5c0270-76f2-4b34-91c8-f893e2bdb52a": "domain",
-  "cf406b31-9226-4c29-b123-45ec92b116fb": "amount",
-  "94f3e1b6-ac42-4ede-9bde-5dd302081245": "changes",
-  "27ddc51f-de1b-4477-aebd-cbf517d1c3d0": "open",
-  "e5337161-edda-456c-a3ef-cdefce934f50": "activities",
-  "26686124-ffbe-4bb4-b1a0-276f806be2ff": "delete",
-  "0a7ea16d-50ba-47a4-9dbd-7456de59fd95": "administrators",
-  "092ecf70-713f-47ef-99b6-0c20227dc9dc": "personal data",
-  "905b7b42-7713-4317-bb64-85ac455349e4": "without",
-  "3213136d-257a-4231-bc7c-0487cfa3ce3d": "national",
-  "98c19141-5237-428d-8291-530f44ff5510": "email address",
-  "3e758736-2d50-47e0-8c85-a0febce3d63d": "payment methods",
-  "0fe765e4-3ec6-43aa-8cae-ef6d89939c85": "deleted",
-  "e122d6c9-a452-4c70-9868-f53c2520aedc": "premises",
-  "f8a39140-3fbc-4cf4-8722-397af032aacf": "open",
-  "334a4a48-e9a8-4b03-b96b-e84a43484eed": "platform",
-  "df3601ce-ba63-4c92-ab84-c28110a17c98": "online",
-  "cfa15cfd-b29a-4560-a899-16c2b32ef33e": "registered",
-  "7d4df329-55b8-400a-88ef-1d3c574c3930": "automatic",
-  "abd59ad5-f77e-474d-b285-f3b1bba03b98": "types",
-  "4979905e-01bf-482e-bbf4-4f34511e2067": "trial period",
-  "bc61e39f-ff48-42fe-8a9f-ca424e6d14a4": "manage",
-  "5990ae9f-6feb-4ab8-8b90-75670048d86b": "affiliation type",
-  "2bcad504-cc3a-4c2d-a7c6-5ccaf40a31e3": "end date",
-  "ca94f857-bc60-4787-8dbb-d254fe27541f": "configure",
-  "4e21f02f-67c1-410a-ad51-29c4c589bd84": "send",
-  "8384ec35-9d29-4cfa-9c34-9c0da78dcbbf": "documents",
-  "b3a100f8-4b6d-4999-8f5f-8d1f0b69bc90": "banner",
-  "b427a2eb-4d55-4f41-b60e-ae3c6819100d": "registration group",
-  "7c80d16a-86e5-4863-a511-9307ea9b0cae": "collect",
-  "0cba8e4e-c676-4dc4-82b0-c1c5c1cf870e": "checked",
-  "113e9816-3db7-46f2-a9d0-3a12cce9abea": "saved",
-  "f00c594a-109f-4dc5-9ead-865761cd684b": "start date",
-  "269872df-ab70-4eae-b671-ab9246162d4e": "account",
-  "8d229fcf-842b-425e-91bb-0f13ef92f852": "tarriff",
-  "38d2f579-e72e-4430-8371-709e20a93f6a": "waiting list",
-  "8ec7b97b-8ed1-4f32-8955-0dc09a4478a3": "filter",
-  "44204376-66cf-43a2-bc0a-1d87be06578d": "period",
-  "9694c53e-b36b-42c4-afe7-573961326afe": "contact persons",
-  "d8671cdb-cda9-45d1-a39b-167214e73e7e": "connected",
-  "d5a6a8f9-d999-4671-974e-b797805d8c9b": "close",
-  "8c2a2a1c-d072-42ba-8928-20e4e65c410f": "optional",
-  "8adaae5b-3d7c-4072-b08c-656bf7f4c26b": "current",
-  "126b6876-8fba-43e8-9bfe-30474ce00a80": "active",
-  "a6754e3a-b490-4373-89d4-c4a105f92847": "location",
-  "52430713-e5c1-4c3f-b338-0eff8dba45dc": "save",
-  "bb637d1f-2c58-45e9-b567-392e04c1d4ce": "try",
-  "bc90ce0a-2273-4942-9ce9-45fead8f928c": "payment",
-  "8ef0c259-c161-4c79-b45f-84ea0b32eb55": "group number",
-  "1c7abea5-54e4-4abb-b9de-bc31dcaf29d2": "member portal",
-  "5f867b56-4a2f-49fb-b1d9-b02a54c58b09": "limit",
-  "6a8f2929-cb53-4343-b7d4-56cd4e349dca": "rights",
-  "0467006a-7ded-4e4f-acec-986d013bea6b": "available",
-  "5d8a33ef-d98c-4b4e-a1ef-7a1f7d499e05": "template",
-  "5a2d17c1-b241-433d-b5fd-73adfbaf483c": "level",
-  "83bc6801-8699-40d2-af1f-c3e7f15639b1": "petitioner"
-}
+    "stamhoofd": "Stamhoofd",
+    "vereniging": "association",
+    "werkjaar": "work year",
+    "standaard": "default",
+    "bedrag": "amount",
+    "gegevens": "data",
+    "activiteit": "activity",
+    "nieuwe": "new",
+    "inschrijven": "register",
+    "aansluiting": "affiliation",
+    "functies": "roles",
+    "instellingen": "settings",
+    "lokale": "local",
+    "leeftijdsgroep": "age group",
+    "inschrijvingen": "registrations",
+    "groepen": "groups",
+    "andere": "other",
+    "automatisch": "automatic",
+    "kampmelding": "camp notification",
+    "wijzig": "change",
+    "bevestig": "confirm",
+    "bewerken": "edit",
+    "functie": "role",
+    "e-mails": "emails",
+    "e-mail": "email",
+    "toevoegen": "add",
+    "melding": "notification",
+    "leeftijdsgroepen": "age groups",
+    "facturatiegegevens": "billing data",
+    "aangerekend": "charged",
+    "betalingen": "payments",
+    "toegang": "access",
+    "gebruikt": "used",
+    "website": "website",
+    "beschrijving": "description",
+    "aangesloten": "affiliated",
+    "domeinnaam": "domain",
+    "aantal": "amount",
+    "wijzigingen": "changes",
+    "openstaande": "open",
+    "activiteiten": "activities",
+    "verwijderen": "delete",
+    "beheerders": "administrators",
+    "persoonsgegevens": "personal data",
+    "zonder": "without",
+    "nationaal": "national",
+    "e-mailadres": "email address",
+    "betaalmethodes": "payment methods",
+    "verwijderd": "deleted",
+    "lokalen": "premises",
+    "openstaand": "open",
+    "platform": "platform",
+    "online": "online",
+    "ingeschreven": "registered",
+    "automatische": "automatic",
+    "soorten": "types",
+    "proefperiode": "trial period",
+    "beheer": "manage",
+    "aansluitingstype": "affiliation type",
+    "einddatum": "end date",
+    "instellen": "configure",
+    "versturen": "send",
+    "documenten": "documents",
+    "banner": "banner",
+    "inschrijvingsgroep": "registration group",
+    "verzamelen": "collect",
+    "nagekeken": "checked",
+    "opgeslagen": "saved",
+    "startdatum": "start date",
+    "account": "account",
+    "tarief": "tarriff",
+    "wachtlijst": "waiting list",
+    "filter": "filter",
+    "periode": "period",
+    "contactpersonen": "contact persons",
+    "gekoppeld": "connected",
+    "sluiten": "close",
+    "optioneel": "optional",
+    "huidige": "current",
+    "actief": "active",
+    "locatie": "location",
+    "opslaan": "save",
+    "probeer": "try",
+    "betaling": "payment",
+    "groepsnummer": "group number",
+    "ledenportaal": "member portal",
+    "beperk": "limit",
+    "rechten": "rights",
+    "beschikbaar": "available",
+    "sjabloon": "template",
+    "niveau": "level",
+    "indiener": "petitioner"
+  }
